# beat-grid-confidence

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
configs/: base.yaml  confidence_mlp.yaml  confidence_only.yaml
data/: README.md
docs/: methodology.md  paper-gaps.md
notebooks/: 01_baseline_and_hidden_states.ipynb
paper/: build.sh  main.tex
scripts/: evaluate.py  export_onnx.py  extract_hidden_states.py  extract_spectrograms.py  generate_figures.py  prepare_audio.py  train.py
src/beat_grid_confidence/: __init__.py  dataset.py  decode.py  evaluation.py  heads.py  losses.py  model.py
tests/: test_dataset.py  test_model.py
